--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-  "description": "Logz.io logging plugin",
-  "documentation": "https://github.com/logzio/Docker-Logging-Driver",
-  "entrypoint": ["/bin/logzio-logging-plugin"],
+  "description": "axiom.co logging plugin",
+  "documentation": "https://github.com/axiomhq/docker-logging-plugin",
+  "entrypoint": ["/bin/axiom-logging-plugin"],
   "network": {
     "type": "host"
   },
   "interface": {
     "types": ["docker.logdriver/1.0"],
-    "socket": "logzio.sock"
+    "socket": "axiom.sock"
   },
   "env": [
     {
@@ -17,31 +17,31 @@
       "settable": ["value"]
     },
     {
-      "name": "LOGZIO_DRIVER_LOGS_DRAIN_TIMEOUT",
+      "name": "AXIOM_DRIVER_LOGS_DRAIN_TIMEOUT",
       "description": "Set how often we send messages (time.duration value)",
       "value": "5s",
       "settable": ["value"]
     },
     {
-      "name": "LOGZIO_DRIVER_CHANNEL_SIZE",
+      "name": "AXIOM_DRIVER_CHANNEL_SIZE",
       "description": "Set number of messages waiting in the buffer before pushing to queue and sending them",
       "value": "10000",
       "settable": ["value"]
     },
     {
-      "name": "LOGZIO_DRIVER_DISK_THRESHOLD",
+      "name": "AXIOM_DRIVER_DISK_THRESHOLD",
       "description": "Set maximum queue disk size ( in %)",
       "value": "70",
       "settable": ["value"]
     },
     {
-      "name": "LOGZIO_MAX_MSG_BUFFER_SIZE",
+      "name": "AXIOM_MAX_MSG_BUFFER_SIZE",
       "description": "Used when logs that are chunked by docker with 16kb limit. Set the biggest message that the system can reassemble.",
       "value": "1048576",
       "settable": ["value"]
     },
     {
-      "name": "LOGZIO_MAX_PARTIAL_BUFFER_DURATION",
+      "name": "AXIOM_MAX_PARTIAL_BUFFER_DURATION",
       "description": "How long the buffer keeps the partial logs before flushing them.",
       "value": "500ms",
       "settable": ["value"]
